; ModuleID = '/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_filter_settings_string_json.c'
source_filename = "/home/carl/AnghaBench/HandBrake/libhb/extr_common.c_hb_filter_settings_string_json.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @hb_filter_settings_string_json(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %7 = load i8*, i8** %4, align 8
  %8 = call i32* @hb_value_json(i8* %7)
  store i32* %8, i32** %5, align 8
  %9 = load i32, i32* %3, align 4
  %10 = load i32*, i32** %5, align 8
  %11 = call i8* @hb_filter_settings_string(i32 %9, i32* %10)
  store i8* %11, i8** %6, align 8
  %12 = call i32 @hb_value_free(i32** %5)
  %13 = load i8*, i8** %6, align 8
  ret i8* %13
}

declare dso_local i32* @hb_value_json(i8*) #1

declare dso_local i8* @hb_filter_settings_string(i32, i32*) #1

declare dso_local i32 @hb_value_free(i32**) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
